--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 
         document.addEventListener("DOMContentLoaded", function () {
             const API_URL = "https://api.jsonbin.io/v3/b/673c9a24e41b4d34e456eab6";
-            const MASTER_KEY = "your-master-key-here"; // Remplacez par votre clé maître
-            const ACCESS_KEY = "your-access-key-here"; // Remplacez par votre clé d'accès
+            const MASTER_KEY = "$2a$10$C2IpRYDMnBVS09UziRhWsuPTWBDUAY3bghoT9Fz9cORd/9QFWGhiW";
+            const ACCESS_KEY = "$2a$10$CK7kuKd1eFHbsVtOb88Jbu4vIKYO5oTKnHfu2t0L.vVU2DP/wHcmW";
             let inventoryItems = [];
 
             // Charger les données depuis JSONBin
