--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             margin-top: 20px;
             width: 90%;
             max-width: 600px;
+            opacity: 0; /* Caché par défaut */
+            transition: opacity 1s ease; /* Transition pour un effet de fondu */
         }
         .item {
             display: grid;
@@ -157,13 +159,6 @@
             justify-content: center;
             align-items: center;
             z-index: 9999; /* Devant tout */
-            opacity: 1; /* Initialement visible */
-            transition: opacity 1s ease;
-        }
-
-        #welcomeModal.hidden {
-            opacity: 0; /* Transition vers invisible */
-            pointer-events: none; /* Désactive les clics */
         }
 
         #welcomeModal .modal-content {
@@ -347,12 +342,10 @@
             const inventorySection = document.getElementById("inventorySection");
 
             enterButton.addEventListener("click", () => {
-                welcomeModal.classList.add("hidden"); // Transition pour masquer
+                welcomeModal.style.opacity = 0; // Transition pour masquer
                 setTimeout(() => {
                     welcomeModal.style.display = "none"; // Retire complètement la modale
-                    inventorySection.style.opacity = 0; // Début du fondu
-                    inventorySection.style.transition = "opacity 1s ease"; // Transition du fondu
-                    inventorySection.style.opacity = 1; // Fin du fondu
+                    inventorySection.style.opacity = 1; // Affiche l'inventaire avec un effet de fondu
                 }, 1000); // Correspond à la durée de l'opacité
             });
 
